--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,9 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-  # q2-dummy-types is only required for the dummy methods and
-  # visualizers provided as examples. Remove this dependency when you're
-  # ready to develop your plugin, and add your own dependencies (if there are
-  # any).
-  - conda create --yes -n test-env -c qiime2 python=$PYTHON_VERSION qiime q2-dummy-types nose flake8
+  - conda create --yes -n test-env -c qiime2 python=$PYTHON_VERSION numpy flake8
   - source activate test-env
+  - pip install https://github.com/qiime2/qiime2/archive/master.zip https://github.com/qiime2/q2-types/archive/master.zip
   - pip install .
 script:
   - nosetests
