--- a/q2_taxa/assets/package.json
+++ b/q2_taxa/assets/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "q2-taxa-viz",
-  "version": "0.0.1-dev",
+  "name": "",
+  "version": "",
   "description": "",
   "main": "main.js",
   "dependencies": {
     "d3": "^4.2.6",
     "d3-scale-chromatic": "^1.0.2",
+    "natural-sort": "^1.0.0",
     "thenby": "^1.2.1"
   },
   "devDependencies": {
@@ -29,7 +30,7 @@
     "type": "git",
     "url": "git+https://github.com/qiime2/q2-taxa.git"
   },
-  "author": "Matthew Ryan Dillon",
+  "author": "",
   "bugs": {
     "url": "https://github.com/qiime2/q2-taxa/issues"
   },
