--- a/q2_taxa/assets/index.template
+++ b/q2_taxa/assets/index.template
@@ -18,8 +18,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12">
-          <img class="header" src="dist/qiime_logo_large.png" alt="QIIME"
-           width="288" height="93">
+          <a href="http://2.qiime.org/">
+            <img class="header" src="dist/qiime_logo_large.png" alt="QIIME 2"
+             width="288" height="93">
+          </a>
         </div>
       </div>
     </div>
