--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 sudo: false
 language: python
 env:
-  - PYTHON_VERSION=3.5
+  - PYTHON_VERSION=3.5 NODE_VERSION=6
 before_install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
-  - ./miniconda.sh -b
+  - ./miniconda.sh -b && rm miniconda.sh
   - export PATH=/home/travis/miniconda3/bin:$PATH
+  - nvm install $NODE_VERSION
 install:
   - conda create --yes -n test-env -c qiime2 python=$PYTHON_VERSION numpy
   - source activate test-env
@@ -14,7 +15,11 @@ install:
   - pip install flake8
   - pip install .
   - git clone https://github.com/qiime2/q2lint
+  - (cd q2_taxa/assets/barplot && npm install)
 script:
   - nosetests
   - flake8
-  - python q2lint/q2lint.py
+  - python q2lint/q2lint.py && rm -rf q2lint
+  - (cd q2_taxa/assets/barplot && npm run build)
+  - git status
+  - git diff-index --quiet HEAD -- || (echo 'barplot - src and dst are unsynced')
