--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,15 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-  - conda create --yes -n test-env -c qiime2 python=$PYTHON_VERSION numpy
+  - conda create --yes -n test-env -c qiime2 python=$PYTHON_VERSION numpy pytest pytest-cov
   - source activate test-env
   - pip install https://github.com/qiime2/qiime2/archive/master.zip https://github.com/qiime2/q2-types/archive/master.zip https://github.com/qiime2/q2templates/archive/master.zip
-  - pip install flake8
+  - pip install flake8 coveralls
   - pip install .
   - git clone https://github.com/qiime2/q2lint
 script:
-  - nosetests
+  - py.test --cov=q2_taxa
   - flake8
   - python q2lint/q2lint.py
+after_success:
+  - coveralls
