--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ before_install:
   - conda config --set always_yes yes
   - conda update -q conda
   - conda info -a
-  - git clone https://github.com/qiime2/q2lint ../q2lint
 install:
   - conda create -q -n test-env --file https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-conda-linux-64.txt
   - source activate test-env
   - conda install -q pytest-cov
   - pip install -q flake8 coveralls
+  - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
   - make install
 script:
   - make lint
