BLD: make webpack return exit code

--- a/q2_taxa/assets/barplot/package.json
+++ b/q2_taxa/assets/barplot/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --inline",
-    "build": "webpack"
+    "build": "webpack --bail"
   },
   "repository": {
     "type": "git",
