MAINT: Updates for python 3.6

--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -13,14 +13,13 @@ build:
   script: make install
 
 requirements:
-  build:
-    - python 3.5*
+  host:
+    - python {{ python }}
     - setuptools
     - nodejs
 
   run:
-    - python 3.5*
-    - setuptools
+    - python {{ python }}
     - pandas
     - qiime2 {{ release }}.*
     - q2templates {{ release }}.*
