--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,4 @@ jobs:
       with:
         package-name: q2-taxa
         build-target: staging
-        additional-tests: py.test --pyargs q2_taxa --capture=tee-sys
+        additional-tests: py.test --pyargs q2_taxa
