--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -21,11 +21,14 @@ requirements:
   run:
     - python {{ python }}
     - pandas
-    - qiime2 {{ release }}.*
-    - q2templates {{ release }}.*
-    - q2-types {{ release }}.*
+    - qiime2 {{ qiime2 }}
+    - q2templates {{ q2templates }}
+    - q2-types {{ q2_types }}
 
 test:
+  requires:
+    - pytest
+
   imports:
     - q2_taxa
     - qiime2.plugins.taxa
