--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -30,6 +30,9 @@ requirements:
     - q2-types {{ qiime2_epoch }}.*
 
 test:
+  commands:
+    - py.test --pyargs q2_taxa
+    
   requires:
     - qiime2 >={{ qiime2 }}
     - q2templates >={{ q2templates }}
