--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
     - name: set up git repo for versioneer
       run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
-    - uses: qiime2/action-library-packaging@beta
+    - uses: qiime2/action-library-packaging@alpha1
       with:
         package-name: q2-taxa
         build-target: dev
