--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - qiime2 {{ qiime2_epoch }}.*
     - q2templates {{ qiime2_epoch }}.*
     - q2-types {{ qiime2_epoch }}.*
+    - q2-feature-table {{ qiime2_epoch }}.*
 
 test:
   commands:
@@ -37,6 +38,7 @@ test:
     - qiime2 >={{ qiime2 }}
     - q2templates >={{ q2templates }}
     - q2-types >={{ q2_types }}
+    - q2-feature-table >= {{ q2-feature-table }}
     - pytest
 
   imports:
